--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
+    display: block;
     padding: 0;
     margin: 0;
     font: 15px/1.5 Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
-    background-image: url(./image.jpg);
+    background-color: linear-gradient(135deg,grey, green);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -15,18 +15,18 @@ body{
 }
 /*header*/
 header{
-    background: darkcyan;
+    background: black;
     color: white;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: purple 3px solid;
+    border-bottom: green 3px solid;
 }
 header a{
     color:white;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 2px 2px 2px green;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 header ul{
@@ -50,7 +50,7 @@ header nav{
     margin-top: 10px;
 }
 header .highlight, header .current a{
-    color: purple;
+    color: green;
     font-weight: bold;
 }
 header a:hover{
@@ -79,7 +79,7 @@ header h1{
     text-align: center;
 }
 .sidebar a.active{
-    background-color: darkcyan;
+    background-color: green;
     color:white;
     text-shadow: 2px 2px 2px black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -95,6 +95,33 @@ header h1{
     align-content: space-around;
     gap: 0.5rem;
 }
-button{
-    background-color: darkcyan;
+#searchBtn{
+    background-color: black;
+    border-radius: 20px;
+    width: 150px;
+    color: #f1f1f1;  
+    height: 45px;
+    text-align: center;
+
+
+}
+#searchBtn:hover{
+    background-color: green;
+    color: white
+}
+#animalName{
+    border-radius: 20px;
+    width: 350px;
+    height: 40px;
+    text-align: center;
+    border: solid black 2px;
+    color: green;
+}
+.container2{
+    position: absolute;
+    left: 45%;
+    bottom: 50%;
+}
+#animalName:hover{
+background-color:wheat;
 }
