--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header h1{
     background-color: green;
     color: white
 }
-#movieName{
+#movieNameInput{
     border-radius: 20px;
     width: 350px;
     height: 40px;
@@ -121,7 +121,7 @@ header h1{
     left: 45%;
     bottom: 50%;
 }
-#movielName:hover{
+#movielNameInput:hover{
 background-color:wheat;
 }
 .sidebar{
