edited the style sheet for hovers

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ header h1{
     left: 45%;
     bottom: 50%;
 }
-#movielNameInput:hover{
+#movieNameInput:hover{
 background-color:wheat;
 }
 .sidebar{
