--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ header h1{
     border: solid black 2px;
     color: green;
 }
-.container2{
+.movieSearch{
     position: absolute;
     left: 45%;
     bottom: 50%;
