--- a/style.css
+++ b/style.css
@@ -130,12 +130,12 @@ header h1{
     border: solid black 2px;
     color: green;
 }
-.movieSearch{
+.container2{
     position: absolute;
     left: 45%;
     bottom: 50%;
 }
-#movieNameInput:hover{
+#movielNameInput:hover{
 background-color:wheat;
 }
 .sidebar{
