--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ footer {
 .movieItem{
     padding: 5px;
     margin: 7px;
-    background: white;
+    background: rgb(244, 234, 88);
     border-radius: 15px;
 }
 .buttons {
