--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header h1{
 }
 #movieNameInput{
     border-radius: 20px;
-    width: 250px;
+    width: 330px;
     height: 30px;
     text-align: center;
     border: solid black 2px;
@@ -185,4 +185,8 @@ footer {
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 1px;
     padding: 10px;
+}
+#_more a{ 
+    text-decoration: none;
+    color: black;
 }
