--- a/style.css
+++ b/style.css
@@ -175,7 +175,8 @@ html, body {
     padding: 5px;
     margin: 7px;
     background: white;
-    border-radius: 2px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .buttons {
     display: flex;
@@ -183,7 +184,7 @@ html, body {
 }
 #searchResultContainer{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1px;
     padding: 10px;
 }
