--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ html, body {
 .movieItem{
     padding: 5px;
     margin: 7px;
-    background: white;
+    background: whitesmoke;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
