--- a/style.css
+++ b/style.css
@@ -178,6 +178,12 @@ html, body {
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+.movieItem h3{
+    text-align: center;
+}
+.movieItem .buttons, p,img{
+    margin-left: 25%;
+}
 .buttons {
     display: flex;
     gap: 0.5rem;
