--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@ html, body {
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+.movieItem:hover{
+    scale: 1.07; 
+    
+}
 .movieItem h3{
     text-align: center;
 }
