--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ html, body {
 }
 /*Movie card*/
 
-.movieItem{
+.movieItem, .wishlistItem {
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -151,7 +151,7 @@ html, body {
     font-weight: bold;
     color: white;
 }
-#searchResultContainer{
+#searchResultContainer, #wishlistContainer{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1px;
