--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ html, body {
     background: rgb(219, 216, 216);
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    
+}
+.wishlistItem{
+
 }
 .movieItem:hover{
     scale: 1.07; 
@@ -156,6 +160,9 @@ html, body {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1px;
     padding: 10px;
+}
+#wishlistContainer{
+    border: 1px solid;
 }
 #_more a{ 
     text-decoration: none;
