--- a/style.css
+++ b/style.css
@@ -121,8 +121,8 @@ html, body {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     
 }
-.wishlistItem{
-
+.wishlistItem:hover {
+    transform: scale(1.05);
 }
 .movieItem:hover{
     scale: 1.07; 
