--- a/style.css
+++ b/style.css
@@ -117,9 +117,6 @@ html, body {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     
 }
-.wishlistItem, p{
-    color: black;
-}
 .wishlistItem button{
     border-radius: 10px;
     border: 1.2px green solid;
@@ -127,6 +124,9 @@ html, body {
     width: 40px;
     color: green;
 
+}
+.wishlistItem:hover{
+    scale: 1.05px
 }
 .wishlistItem button:hover{
     background-color: green;
